--- a/home.css
+++ b/home.css
@@ -299,7 +299,7 @@ span{
     height: 6rem;
     background-color: white;
     border-radius: 50%;
-    margin-top: 1rem;
+    margin: 1rem;
     text-decoration: none;
     color: black;
     gap: 0.2rem;
@@ -460,3 +460,4 @@ span{
     }
 
 }
+
